# Production-Ready-RAG

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  streamlit_app.py
app/: Dockerfile  config.py  docker-compose.yml  embedding.py  llm.py  main.py  rag.py  schemas.py  ui.py  vector_store.py
static/: app.js  index.html  style.css
